--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "optimised carpool system",
   "main": "server.js",
   "dependencies": {
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "mapbox": "^1.0.0-beta10",
     "mapbox-gl": "^1.6.1"
