--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "md5": "^2.2.1",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.2",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "stripe": "^7.14.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
